examples/test/testpolicy5544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5544
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key28: value19
      key5: value19
      key30: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value4
          key47: value25
      podSelector:
        matchLabels:
          key27: value47
